--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    def AAVersion = '4.5.2'
+    dependencies {
+        annotationProcessor "org.androidannotations:androidannotations:$AAVersion"
+        implementation "org.androidannotations:androidannotations-api:$AAVersion"
+    }
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 }
